--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#003058</color>
     <color name="colorPrimaryLight">#0077CF</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorDisableButton">#A0A0A0</color>
 </resources>
