--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_height="370dp"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    tools:context=".RegisterActivity">
+    tools:context=".ui.RegisterActivity">
 
     <ImageButton
         android:id="@+id/btn_cancel"
