상단 AppBar 추가 AppBar에 메뉴 버튼, 사용자 메뉴 버튼 추가 메뉴 버튼에 항목만 추가(기능 x) 사용자 메뉴 버튼에 항목 추가 - 여기에 로그아웃 버튼 적용 subtitle 사라지는 애니메이션 추가

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <!-- MyAlertDialogStyle -->
+    <style name="MyAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">@color/colorPrimaryDark</item>
+        <item name="dialogCornerRadius">20dp</item>
+    </style>
+
 </resources>
