--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,35 +7,76 @@
     android:orientation="vertical"
     tools:context=".ui.MainActivity">
 
-    <TextView
-        android:id="@+id/title"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="하루, 한 줄"
-        android:gravity="center"
-        android:textSize="35sp"
-        android:textColor="@color/colorPrimaryDark"
-        android:fontFamily="@font/cafe24_oneprettynight"
-        android:textStyle="bold"
-        android:layout_marginTop="20dp"/>
+        android:layout_alignParentTop="true">
 
-    <TextView
-        android:id="@+id/subtitle"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/btn_menu"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_menu"
+                android:tint="@android:color/white"
+                android:layout_gravity="start"/>
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textSize="35sp"
+                android:textColor="#ffffff"
+                android:fontFamily="@font/cafe24_oneprettynight"
+                android:textStyle="bold"
+                android:layout_margin="10dp"
+                android:layout_gravity="center"/>
+
+            <ImageView
+                android:id="@+id/btn_user"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_user"
+                android:tint="@android:color/white"
+                android:layout_gravity="end"
+                android:layout_marginEnd="15dp"/>
+
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <LinearLayout
+        android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="오늘 당신의 하루는 어땠나요?"
-        android:gravity="center"
-        android:textSize="25sp"
-        android:textColor="@color/colorPrimaryDark"
-        android:fontFamily="@font/cafe24_oneprettynight"
-        android:layout_marginVertical="20dp"
-        android:layout_below="@+id/title"/>
+        android:layout_below="@+id/appBar">
+
+        <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_subtitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="오늘 당신의 하루는 어땠나요?"
+            android:textSize="25sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:fontFamily="@font/cafe24_oneprettynight"
+            android:gravity="center"
+            android:backgroundTint="#ffffff"
+            app:fabType="square" />
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/subtitle"/>
+        android:layout_below="@+id/ll"
+        android:overScrollMode="never"/>
 
     <ImageButton
         android:id="@+id/btn_add"
