--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#004680</color>
     <color name="colorPrimaryDark">#003058</color>
     <color name="colorPrimaryLight">#0077CF</color>
+    <color name="colorPrimarySuperLight">#80D8FF</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorDisableButton">#A0A0A0</color>
 </resources>
