PostActivity에서 firebase storage에 id/"올린날짜.jpg" 파일로 업로드되는 것까지 확인 파일 접근 권한 부여하는 코드 구현

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -111,6 +111,7 @@
                 android:adjustViewBounds="true"/>
 
             <TextView
+                android:id="@+id/btn_load_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="사진 불러오기"
