--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,99 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="350dp"
-    android:layout_height="370dp"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    tools:context=".ui.RegisterActivity">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageButton
-        android:id="@+id/btn_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_gravity="end"
-        android:src="@drawable/ic_cancel_pridark_24dp"
-        android:background="@android:color/transparent"/>
+    <data>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
-        android:text="회원가입"
-        android:fontFamily="@font/cafe24_oneprettynight"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        <variable
+            name="viewmodel"
+            type="com.whalez.onedayoneline.ui.auth.AuthViewModel" />
+    </data>
 
-    <EditText
-        android:id="@+id/txt_id"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorPrimaryLight"
-        android:drawableStart="@drawable/ic_person_white_24dp"
-        android:hint="이메일"
-        android:fontFamily="@font/cafe24_oneprettynight"
-        android:importantForAutofill="no"
-        android:inputType="text"
-        android:padding="10dp"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff" />
+    <LinearLayout
+        android:layout_width="350dp"
+        android:layout_height="370dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        tools:context=".ui.auth.RegisterActivity">
 
-    <EditText
-        android:id="@+id/txt_password1"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorPrimaryLight"
-        android:drawableStart="@drawable/ic_lock_white_24dp"
-        android:hint="비밀번호"
-        android:fontFamily="@font/cafe24_oneprettynight"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        android:padding="10dp"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff" />
+        <ImageButton
+            android:id="@+id/btn_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_margin="5dp"
+            android:background="@android:color/transparent"
+            android:onClick="@{() -> viewmodel.finish()}"
+            android:src="@drawable/ic_cancel_pridark_24dp" />
 
-    <EditText
-        android:id="@+id/txt_password2"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorPrimaryLight"
-        android:drawableStart="@drawable/ic_lock_white_24dp"
-        android:hint="비밀번호 확인"
-        android:fontFamily="@font/cafe24_oneprettynight"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        android:padding="10dp"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/cafe24_oneprettynight"
+            android:text="회원가입"
+            android:textColor="@color/colorPrimary"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/password_check_message"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:textColor="@color/colorAccent"
-        android:layout_marginTop="10dp"
-        android:text="비밀번호가 일치하지 않습니다."/>
+        <EditText
+            android:id="@+id/txt_id"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorPrimaryLight"
+            android:drawableStart="@drawable/ic_person_white_24dp"
+            android:fontFamily="@font/cafe24_oneprettynight"
+            android:hint="이메일"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:padding="10dp"
+            android:text="@={viewmodel.email}"
+            android:textColor="#ffffff"
+            android:textColorHint="#ffffff" />
+
+        <EditText
+            android:id="@+id/txt_password1"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorPrimaryLight"
+            android:drawableStart="@drawable/ic_lock_white_24dp"
+            android:fontFamily="@font/cafe24_oneprettynight"
+            android:hint="비밀번호"
+            android:importantForAutofill="no"
+            android:text="@={viewmodel.password}"
+            android:inputType="textPassword"
+            android:padding="10dp"
+            android:textColor="#ffffff"
+            android:textColorHint="#ffffff" />
+
+        <EditText
+            android:id="@+id/txt_password2"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorPrimaryLight"
+            android:drawableStart="@drawable/ic_lock_white_24dp"
+            android:fontFamily="@font/cafe24_oneprettynight"
+            android:text="@={viewmodel.password_check}"
+            android:hint="비밀번호 확인"
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            android:padding="10dp"
+            android:textColor="#ffffff"
+            android:textColorHint="#ffffff" />
+
+        <TextView
+            android:id="@+id/password_check_message"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginTop="10dp"
+            android:text="비밀번호가 일치하지 않습니다."
+            android:textColor="@color/colorAccent" />
 
 
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="25dp"
-        android:background="@color/colorPrimary"
-        android:text="가입하기"
-        android:fontFamily="@font/cafe24_oneprettynight"
-        android:textColor="#ffffff"
-        android:textSize="20sp" />
+        <Button
+            android:id="@+id/btn_register"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp"
+            android:background="@color/colorPrimary"
+            android:fontFamily="@font/cafe24_oneprettynight"
+            android:text="가입하기"
+            android:onClick="@{() -> viewmodel.register()}"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
 
-</LinearLayout>
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+
+    </LinearLayout>
+
+</layout>
