필요없는거 지우고 필요한거 몇가지 추가함. PostActivity에서 올리기 버튼 누르면 아이템 리셋 되도록. 리스트가 비어있으면 tutorial? 메시지 보이게 하고 비어있지 않으면 보이지 않게 했음.
item click listener 구현해야 함.

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -98,7 +98,7 @@
         <RelativeLayout
             android:id="@+id/rl_1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/postImageHeight"
             android:layout_below="@+id/tv_1"
             android:background="@drawable/rectangle_primary_dark"
             android:padding="1dp">
@@ -106,15 +106,16 @@
             <ImageView
                 android:id="@+id/img_post"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/postImageHeight"
+                android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/default_image" />
 
             <TextView
                 android:id="@+id/btn_load_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
                 android:layout_centerInParent="true"
                 android:fontFamily="@font/cafe24_oneprettynight"
                 android:text="사진 불러오기"
