메뉴에서 삭제하기 버튼 누르면 삭제 체크 박스 뜨고 하단에 삭제버튼 뜨도록 구현했는데 체크 박스가 맨 위 아이템 하나에만 뜬다. 해결해야 함.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -123,4 +123,18 @@
             android:layout_gravity="end"/>
     </LinearLayout>
 
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="삭제하기"
+        android:textColor="#FFFFFF"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="10dp"
+        android:background="@color/colorSemiRed"
+        android:visibility="gone"/>
+
 </RelativeLayout>
