Coordinator Layout과 Collapsing Toolbar Layout을 적용하여 RecyclerView 를 스크롤 할 때 위 앱 바가 가려지도록 구현했다. 원래 Floating Action Button으로 구현해 놓은 기능이긴 했는데 Collapsing Toolbar가 의미적으로나 동작면에서나 더 나은 것 같아서.. PostActivity에서 텍스트를 입력하면 글자 limit이 바로 바뀌도록 구현, 올리기 버튼 누르면 모든 뷰 동작을 disable 하도록 하고 업로드 상태에 따라 로딩 화면이 갱신되도록 했다.-progressbar
포스트 할 때 중복된 날짜의 데이터 처리하는 것 구현해야 함.

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/toolbarHeight"
         android:layout_alignParentTop="true">
 
         <androidx.appcompat.widget.Toolbar
@@ -165,7 +165,8 @@
             android:importantForAutofill="no"
             android:padding="10dp"
             android:textColor="#000000"
-            android:textColorHint="#000000" />
+            android:textColorHint="#000000"
+            android:maxLength="126"/>
 
         <Button
             android:id="@+id/btn_post"
@@ -179,6 +180,23 @@
             android:textColor="#ffffff"
             android:textSize="18sp"
             android:textStyle="bold" />
+
+        <FrameLayout
+            android:id="@+id/progressLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#A0A0A0A0"
+            android:visibility="gone">
+
+            <ProgressBar
+                android:id="@+id/progressbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
+                android:layout_gravity="center"
+                android:layout_margin="30dp"/>
+
+        </FrameLayout>
 
     </RelativeLayout>
 
