Post 올릴 때 중복된 날짜가 있는지 확인하고 중복되어있지 않은 경우에만 데이터를 업로드 할 수 있도록 구현함.
+++ To Do +++
1. Search
2. Menu Options : Licenses, App Info, 회원탈퇴
3. UI/UX 개선

+++ More +++
1. Preview in PostActivity
2. select few basic images(not in user Local Gallery)
3. LiveData 적용

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -186,13 +186,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#A0A0A0A0"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <ProgressBar
                 android:id="@+id/progressbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
+                style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
+                android:progressBackgroundTint="#FFFFFF"
+                android:progressTint="@color/colorPrimaryLight"
                 android:layout_gravity="center"
                 android:layout_margin="30dp"/>
 
