--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -186,7 +186,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#A0A0A0A0"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <ProgressBar
                 android:id="@+id/progressbar"
