--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -69,12 +69,12 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="오늘 당신의 하루는 어땠나요?"
-                        android:textSize="25sp"
-                        android:textColor="@color/colorPrimaryDark"
                         android:fontFamily="@font/font_cafe24_oneprettynight"
                         android:gravity="center"
-                        android:padding="15dp"/>
+                        android:padding="15dp"
+                        android:text="오늘 당신의 하루는 어땠나요?"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="25sp" />
 
                 </LinearLayout>
 
@@ -103,17 +103,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
     </androidx.core.widget.NestedScrollView>
 
-    <ImageButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/ic_only_plus"
         android:layout_gravity="end|bottom"
+        android:backgroundTint="@color/colorPrimaryLight"
         android:layout_margin="20dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/ic_plus_icon" />
+        app:borderWidth="0dp"
+        app:rippleColor="@color/colorPrimary" />
 
     <LinearLayout
         android:id="@+id/tutorial"
